Fixed wrong dialog layout on mobile
On mobile devices, the dialog wasn't centered due to the "padding" property applied directly to the dialog. With this, the padding is applied in a div inside the dialog.

--- a/src/app.css
+++ b/src/app.css
@@ -175,7 +175,6 @@ button:active {
   left: 15vw;
   width: 70vw;
   border-radius: 12px;
-  padding: 20px 15px;
   transition: opacity 0.2s ease-in-out;
 }
 
@@ -265,4 +264,8 @@ a {
   left: calc(50vw - 50px);
   width: 100px;
   height: 100px;
+}
+
+.fullDialogPadding {
+  padding: 20px 15px;
 }
